# gossipsub-large-message-lab

./: .dockerignore  Dockerfile  README.md  pyproject.toml
docs/: candidate-recommendation.md  interoperability-plan.md  protocol-model.md  security-analysis.md  simulator-assumptions.md
examples/: basic-scenario.json
reports/: simulation-report.md
src/gossipsub_large_msg_lab/: __init__.py  cli.py  protocol.py  reassembly.py  reports.py  security.py  simulator.py
tests/: test_cli.py  test_protocol.py  test_reassembly.py  test_simulator.py
